force-app/main/default/objects/Site_Details__c/Site_Details__c.object-meta.xml
<CustomObject>
    <description>Stores the Site/Plant metadata information entered in initial plant info prompt</description>
    <label>Site Details</label>
    <nameField>
        <label>Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>