force-app/main/default/objects/Site_Details__c/fields/Commercial_Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Operation_Date__c</fullName>
    <formula>&apos;None&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Operation Date</label>
    <type>Text</type>
</CustomField>