force-app/main/default/objects/Site_Details__c/fields/Customer_Plant_Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Plant_Asset_Id__c</fullName>
    <formula>&apos;None&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Plant Asset Id</label>
    <type>Text</type>
</CustomField>