force-app/main/default/objects/Site_Details__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <formula>&apos;None&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Source</label>
    <type>Text</type>
</CustomField>