force-app/main/default/objects/Site_Details__c/fields/Elevation__c.field-meta.xml
<CustomField>
    <fullName>Elevation__c</fullName>
    <formula>&apos;None&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elevation</label>
    <type>Text</type>
</CustomField>