force-app/main/default/objects/Site_Details__c/fields/Met_Mast__c.field-meta.xml
<CustomField>
    <fullName>Met_Mast__c</fullName>
    <label>Met Mast</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>