force-app/main/default/objects/Site_Details__c/fields/Plant_Asset__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Asset</label>
    <referenceTo>Plant_Asset__c</referenceTo>
    <relationshipLabel>Site Details</relationshipLabel>
    <relationshipName>Site_Details</relationshipName>
    <type>Lookup</type>
</CustomField>