force-app/main/default/objects/Site_Details__c/fields/Substation_Switchgears__c.field-meta.xml
<CustomField>
    <fullName>Substation_Switchgears__c</fullName>
    <label>Substation/Switchgears</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>